[project]
name = "backend-budget-buddy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.19.0",
    "fastapi>=0.104.1",
    "greenlet>=3.0.1",
    "pandas>=2.1.4",
    "pydantic[email]>=2.5.1",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.6",
    "sqlalchemy>=2.0.23",
    "uvicorn>=0.24.0",
    "twilio>=9.5.2",
    "passlib>=1.7.4",
    "bcrypt>=4.3.0",
    "jose>=1.0.0",
    "python-jose>=3.4.0",
    "psycopg2-binary>=2.9.10",
]
